added a footer note

--- a/EQR_Go2/EQR_Go2/Views/Shared/_EntryLayout.cshtml
+++ b/EQR_Go2/EQR_Go2/Views/Shared/_EntryLayout.cshtml
@@ -151,6 +151,9 @@
             <div class="row">
                 @RenderBody()
             </div>
+            <div class="row" style="text-align:center;">
+                <b>For constructive suggestions, please send me an <a href="mailto:justmepratik@gmail.com">email</a>.</b>
+            </div>
         </div>
     </div>
 
